RESOLVED FIXED288264
REGRESSION(290757@main?)[macOS Debug]: ASSERTION FAILED: ProcessCapabilities::canUseAcceleratedBuffers() in pdf tests (failure in EWS)
https://bugs.webkit.org/show_bug.cgi?id=288264
Summary REGRESSION(290757@main?)[macOS Debug]: ASSERTION FAILED: ProcessCapabilities:...
Marta Darbinyan
Reported 2025-02-21 17:20:33 PST
Multiple tests are failing with assertion errors. accessibility/mac/iframe-relative-frame.html accessibility/mac/basic-embed-pdf-accessibility.html accessibility/mac/iframe-pdf.html accessibility/mac/scrolling-in-pdf-crash.html http/tests/pdf/linearized-pdf-in-iframe.html pdf/annotations/checkbox-set-active.html pdf/annotations/dropdown-select-second-option.html pdf/annotations/radio-buttons-select-second.html pdf/fullscreen.html pdf/pdf-in-iframe-with-text-annotation.html Suspecting change is 290757@main within the range of first failed and last passed test. Error logs: CoreGraphics PDF has logged an error. Set environment variable "CG_PDF_VERBOSE" to learn more. 2025-02-21 15:10:22.586 WebKitTestRunner[71265:28815109] +[IMKClient subclass]: chose IMKClient_Modern ASSERTION FAILED: ProcessCapabilities::canUseAcceleratedBuffers() /Volumes/Data/worker/macOS-Sequoia-Debug-WK2-Tests-EWS/build/Source/WebCore/platform/graphics/cocoa/IOSurface.mm(87) : static std::unique_ptr<IOSurface> WebCore::IOSurface::create(IOSurfacePool *, IntSize, const DestinationColorSpace &, IOSurface::Name, Format) 1 0x302cf6570 WebCore::IOSurface::create(WebCore::IOSurfacePool*, WebCore::IntSize, WebCore::DestinationColorSpace const&, WebCore::IOSurface::Name, WebCore::IOSurface::Format) 2 0x1196cd238 WebKit::ImageBufferShareableMappedIOSurfaceBackend::create(WebCore::ImageBufferBackendParameters const&, WebCore::ImageBufferCreationContext const&) 3 0x11752e788 WTF::RefPtr<WebCore::ImageBuffer, WTF::RawPtrTraits<WebCore::ImageBuffer>, WTF::DefaultRefDerefTraits<WebCore::ImageBuffer>> WebCore::ImageBuffer::create<WebKit::ImageBufferShareableMappedIOSurfaceBackend, WebCore::ImageBuffer>(WebCore::FloatSize const&, float, WebCore::DestinationColorSpace const&, WebCore::ImageBufferPixelFormat, WebCore::RenderingPurpose, WebCore::ImageBufferCreationContext const&) 4 0x117523414 WTF::RefPtr<WebCore::ImageBuffer, WTF::RawPtrTraits<WebCore::ImageBuffer>, WTF::DefaultRefDerefTraits<WebCore::ImageBuffer>> WebKit::allocateBufferInternal<WebCore::ImageBuffer>(WebKit::RemoteLayerBackingStore::Type, WebCore::FloatSize const&, WebCore::RenderingPurpose, float, WebCore::DestinationColorSpace const&, WebCore::ImageBufferPixelFormat, WebCore::ImageBufferCreationContext&) 5 0x117523290 WebKit::RemoteLayerWithInProcessRenderingBackingStore::allocateBuffer() 6 0x117523524 WebKit::RemoteLayerWithInProcessRenderingBackingStore::ensureFrontBuffer() 7 0x1175239a0 WebKit::RemoteLayerWithInProcessRenderingBackingStore::prepareToDisplay() 8 0x1174b13a8 WebKit::RemoteLayerBackingStoreCollection::prepareBackingStoresForDisplay(WebKit::RemoteLayerTreeTransaction&) 9 0x118b9221c WebKit::RemoteLayerTreeContext::buildTransaction(WebKit::RemoteLayerTreeTransaction&, WebCore::PlatformCALayer&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>) 10 0x1169cc048 Test results: https://ews-build.s3-us-west-2.amazonaws.com/macOS-Sequoia-Debug-WK2-Tests-EWS/1d5fb7f3-13428-clean-tree/results.html# History Link: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Ffile-system-access%2FgetDirectory.https.any.worker.html&test=imported%2Fw3c%2Fweb-platform-tests%2Ffile-system-access%2FgetDirectory.https.any.sharedworker.html&test=accessibility%2Fmac%2Fbasic-embed-pdf-accessibility.html&test=accessibility%2Fmac%2Fscrolling-in-pdf-crash.html&test=http%2Ftests%2Fcache%2Fdisk-cache%2Fshattered-deduplication.html&test=http%2Ftests%2Fpdf%2Flinearized-pdf-in-iframe.html&test=pdf%2Fannotations%2Fcheckbox-set-active.html&test=pdf%2Fannotations%2Fdropdown-select-second-option.html&test=pdf%2Fannotations%2Fradio-buttons-select-second.html&test=pdf%2Ffullscreen.html&test=pdf%2Fpdf-in-iframe-with-text-annotation.html&style=debug
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-21 17:21:06 PST
Abrar Rahman Protyasha
Comment 2 2025-02-21 17:45:38 PST
EWS
Comment 3 2025-02-21 18:02:28 PST
Committed 290841@main (dfb8e11413ac): <https://commits.webkit.org/290841@main> Reviewed commits have been landed. Closing PR #41120 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.