REGRESSION(290757@main)[macOS Debug]: ASSERTION FAILED: ProcessCapabilities::canUseAcceleratedBuffers() in pdf tests (failure in EWS) https://bugs.webkit.org/show_bug.cgi?id=288264 rdar://145334282

Reviewed by Richard Robinson.

We can't mix and match accelerated drawing, and accessing the platform
context, because this tries to map IOSurfaces into the web content
process, which is denied by the sandbox.

This patch corrects the minor typo in layerNeedsPlatformContext since we
want to return true if shouldUseInProcessBackingStore is true, and not
if it's false.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::layerNeedsPlatformContext const):

Canonical link: https://commits.webkit.org/290841@main